--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,7 +1,13 @@
 Changelog
 =========
 
-1.0b1 (unreleased)
+1.0b2 (2012-08-08)
+------------------
+
+- Upgrade to version 1.0 of the ACE editor
+  [optilude]
+
+1.0b1 (2012-08-08)
 ------------------
 
 - Initial release
