--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,11 @@
 Changelog
 =========
 
+1.0b3 (Unreleased)
+------------------
+- Fixed issue with charset encoding on safeFile [djay]
+
+
 1.0b2 (2012-08-08)
 ------------------
 
