--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,13 @@
 Changelog
 =========
 
+1.0b2
+-----
+
+- Fix right click menu bug
+
+- Upgrade to latest version of ACE
+
 1.0b2 (2012-08-08)
 ------------------
 
