--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,12 +1,15 @@
 Changelog
 =========
 
-1.0b2
------
+1.0b3 (Unreleased)
+------------------
 
 - Fix right click menu bug
+  [optilude]
 
 - Upgrade to latest version of ACE
+  [optilude]
+
 
 1.0b2 (2012-08-08)
 ------------------
@@ -14,7 +17,9 @@ Changelog
 - Upgrade to version 1.0 of the ACE editor
   [optilude]
 
+
 1.0b1 (2012-08-08)
 ------------------
 
 - Initial release
+  [optilude]
