--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,8 @@ Changelog
 1.0b4 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fixed a bug with saving files containing non-ASCII characters.
+  [optilude]
 
 
 1.0b3 (2012-10-16)
