We do not need to set the value of the editor text right here because it is also manually set in the SourceEditor class. This will prevent the editor from throwing an error for some html source files.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,8 @@ Changelog
 1.0b5 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- do not set value inside of pre tag since it can go crazy on some markup
+  [vangheem]
 
 
 1.0b4 (2013-01-01)
