--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,8 @@ Changelog
 2.0.1 (unreleased)
 ------------------
 
+- Added ability to convert absolute to relative urls
+  [obct537]
 - Fixed issue with ascii encoding [obct537]
 - now properly serves filesystem files to the thememapper 
   [obct537]
