--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,11 +6,17 @@ Changelog
 
 - Added ability to convert absolute to relative urls
   [obct537]
-- Fixed issue with ascii encoding [obct537]
-- now properly serves filesystem files to the thememapper 
+
+- Fixed issue with ascii encoding
   [obct537]
-- resourceeditor will now register non-standard mimetypes 
-  in the python mimetype module [obct537]
+
+- now properly serves filesystem files to the thememapper
+  [obct537]
+
+- resourceeditor will now register non-standard mimetypes in the python
+  mimetype module
+  [obct537]
+
 
 2.0.0 (2015-03-21)
 ------------------
