--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,8 +4,11 @@ Changelog
 2.0.4 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fixed problem causing file timestamps to show up incorrectly
+  [obct537]
 
+- Fixed problem error preventing file saving from the filemanager
+  [obct537]
 
 2.0.3 (2015-09-27)
 ------------------
