--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,9 @@ Changelog
 1.0.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+Bug fixes:
+
+- Removed accidentally added plone.resourceeditor subdirectory.  [thet]
 
 
 1.0 (2013-05-23)
